--- a/public/css/auth/register.css
+++ b/public/css/auth/register.css
@@ -127,6 +127,19 @@ body {
     pointer-events: none;
 }
 
+.input-wrapper i.fa-lock,
+.input-wrapper i.fa-key,
+.input-wrapper i.fa-check-double,
+.input-wrapper i.fa-shield-alt,
+.input-wrapper i.fa-shield-halved {
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translateY(-50%);
+    color: #888;
+    pointer-events: none;
+}
+
 .input-wrapper i.toggle-password {
     position: absolute;
     top: 50%;
